--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,17 @@ label {
   margin-top: 16px;
   margin-bottom: 16px;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+  width: 10px;
+}
+
+td,
+th {
+  border-top: 1px solid #dddddd;
+  text-align: left;
+  text-overflow: ellipsis;
+  padding: 8px;
+}
