Add custom Input component

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,12 @@ th {
   text-overflow: ellipsis;
   padding: 8px;
 }
+
+h1 {
+  color: #555454;
+}
+
+h2 {
+  font-size: 20px;
+  color: #555454;
+}
