Fix broken background color when voters list overflows

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  min-height: 100vh;
+  background-image: linear-gradient(#f9f4fc, #f8effc);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
